objects/vlocity_ins__ChargeMeasurement__c.object
<CustomObject>
    <description>Represents a type of measurement typically used for usage-based charges such as data charges (Gb) or voice charges (minutes).</description>
    <fields>
        <fullName>vlocity_ins__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Domain__c</fullName>
        <label>Domain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Voice</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this charge measurement. Used to identify the charge measurement across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique charge measurement identifier can be used.</description>
        <label>Global Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__Stackable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Stackable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UnitOfMeasureClass__c</fullName>
        <label>Unit Of Measure Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UnitOfMeasureElement__c</fullName>
        <label>Unit Of Measure Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VisibleId__c</fullName>
        <label>Visible ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Charge Measurement</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Charge Measurement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Measurements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>